<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/collapsingbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="@dimen/expandedTitle_MarginStart"
            app:expandedTitleMarginEnd="@dimen/expandedTitle_MarginEnd">

            <ImageView
                android:id="@+id/res_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/ResThumbNail" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/res_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/hours_layout"
                android:layout_margin="@dimen/hours_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hours_heading"
                    android:textSize="@dimen/heading_textsize"
                    android:text="@string/hours"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:contentDescription="@string/res_hours" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hours"
                    android:textSize="@dimen/detail_textsize" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hours_layout"
                android:id="@+id/address_layout"
                android:layout_marginLeft="@dimen/hours_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_heading"
                    android:textSize="@dimen/heading_textsize"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/address_map"
                    android:contentDescription="@string/address_and_map" />

                <TextView
                    android:layout_width="@dimen/address_size"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:layout_below="@id/address_heading"
                    android:textSize="@dimen/detail_textsize"
                    android:textStyle="italic"
                    android:layout_marginTop="@dimen/address_margin"
                    android:layout_marginRight="@dimen/address_margin" />

                <ImageView
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_below="@id/address"
                    android:src="@drawable/call_icon"
                    android:layout_marginTop="@dimen/list_side_margin"
                    android:id="@+id/phoneIcon"
                    android:layout_marginRight="@dimen/address_margin"
                    android:contentDescription="@string/phone_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNum"
                    android:layout_toRightOf="@id/phoneIcon"
                    android:layout_below="@id/address"
                    android:textSize="@dimen/detail_textsize"
                    android:layout_marginTop="@dimen/address_margin" />

                <ImageView
                    android:layout_width="@dimen/map_image_size"
                    android:layout_height="@dimen/map_image_size"
                    android:id="@+id/map_image"
                    android:layout_below="@id/address_heading"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:scaleType="fitEnd"
                    android:layout_marginRight="@dimen/address_margin"
                    android:layout_toRightOf="@id/address"
                    android:src="@drawable/maps_icon"
                    android:contentDescription="@string/Navigation" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/website_layout"
                android:layout_margin="@dimen/hours_margin"
                android:layout_below="@id/address_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/website_heading"
                    android:textSize="@dimen/heading_textsize"
                    android:text="@string/website_heading"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:contentDescription="@string/website" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/website_url"
                    android:textSize="@dimen/detail_textsize"
                    android:textColor="@color/Blue"
                    android:clickable="true" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/website_layout"
                android:layout_margin="@dimen/hours_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photos_heading"
                    android:textSize="@dimen/heading_textsize"
                    android:text="@string/photos_heading"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/photos_recycler_view"
                    android:scrollbars="vertical"
                    android:layout_below="@id/photos_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/photo_padding"
                    android:contentDescription="@string/Res_images"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Reviews"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_textsize"
                    android:id="@+id/Reviews_heading"
                    android:textStyle="bold"
                    android:layout_below="@+id/photos_recycler_view"></TextView>

                <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/reviews_recycler_view"
                    android:scrollbars="vertical"
                    android:layout_below="@+id/Reviews_heading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Res_Reviews"></androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/action_fav"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="@dimen/fab_press_translation_z" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>