<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator_layout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/location_margin">

            <ImageView
                android:id="@+id/place_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/place_marker"
                android:padding="@dimen/location_padding"
                android:contentDescription="@string/place_marker" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/place_marker"
                android:contentDescription="@string/ChangeLocation"
                android:focusableInTouchMode="true"
                android:padding="@dimen/location_padding"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/location_textsize"
                android:textStyle="normal"
                tools:text="@string/location_placeholder"
                android:background="@drawable/corner_round" />

            <!--<ImageView-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:id="@+id/currentloc_icon"-->
            <!--android:src="@drawable/currentloc"-->
            <!--android:layout_toRightOf="@id/location"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:clickable="true"/>-->

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="19dp"
                android:layout_height="23dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="invisible" />
            <!--android:layout_toRightOf="@id/currentloc_icon"-->


        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/res_list"
        android:background="@color/grey_300"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--<android.support.v4.widget.SwipeRefreshLayout-->
            <!--android:id="@+id/swipe_refresh_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center_horizontal">-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:paddingTop="@dimen/list_side_margin"
                android:paddingLeft="@dimen/list_side_margin"
                android:paddingRight="@dimen/list_side_margin"
                android:paddingBottom="@dimen/list_side_margin"
                android:contentDescription="@string/Restaurant_List" />
        <!--</android.support.v4.widget.SwipeRefreshLayout>-->

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
